--- a/assets/sass/pages/_details.scss
+++ b/assets/sass/pages/_details.scss
@@ -26,3 +26,139 @@
     }
   }
 }
+.prdPage__detail {
+  margin-top: 3.5rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 3rem;
+  .prdPage__left {
+    display: flex;
+    gap: 3rem;
+    .prdPage__listImg {
+      display: flex;
+      flex-direction: column;
+      gap: 3rem;
+      .imgItems {
+        height: 8rem;
+        width: 8rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 1rem;
+        background-color: $yellow-F9F;
+      }
+    }
+    .prdPage__mainImg {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 1.2rem;
+      background-color: $yellow-F9F;
+    }
+  }
+  .prdPage__right {
+    .prdPage__name {
+      font-size: 4.2rem;
+      font-weight: 400;
+    }
+    .prdPage__price {
+      font-size: 24px;
+      font-weight: 500;
+      color: $gray-9F9;
+    }
+    .prdPage__rate {
+      gap: 2.2rem;
+      font-size: 1.3rem;
+      font-weight: 400;
+      color: $gray-9F9;
+      padding: 1.5rem 0 1.8rem 0;
+    }
+    .prdPage__desc {
+      font-size: 1.3rem;
+      font-weight: 400;
+      text-align: justify;
+    }
+    .prdPage__size {
+      margin-top: 2.2rem;
+      & > p {
+        font-size: 1.4rem;
+        color: $gray-9F9;
+        text-transform: capitalize;
+      }
+      & > ul {
+        margin-top: 1.2rem;
+        gap: 1.6rem;
+        & > li {
+          height: 3rem;
+          width: 3rem;
+          font-size: 1.3rem;
+          border-radius: .4rem;
+          background-color: $yellow-F9F;
+        }
+      }
+    }
+    .prdPage__color {
+      margin-top: 2.2rem;
+      & > p {
+        font-size: 1.4rem;
+        color: $gray-9F9;
+        text-transform: capitalize;
+      }
+      & > ul {
+        margin-top: 1.2rem;
+        gap: 1.6rem;
+        & > li {
+          height: 3rem;
+          width: 3rem;
+          font-size: 1.3rem;
+          border-radius: 50%;
+          background-color: rgb(43, 0, 255);
+        }
+      }
+    }
+    .prdPage__btn {
+      display: flex;
+      gap: 3rem;
+      margin-top: 3.2rem;
+      & > form {
+        width: auto;
+        height: 6.4rem;
+        padding: 1.5rem;
+        font-size: 1.6rem;
+        font-weight: 400;
+        border-radius: 1.2rem;
+        border: .1rem solid $gray-9F9;
+        cursor: pointer;
+        & > input {
+          width: 5rem;
+          height: 100%;
+          border: none;
+          outline: none;
+          text-align: center;
+          font-size: 1.6rem;
+          font-weight: 500;
+        }
+      }
+      & > button {
+        font-size: 2rem;
+        padding: 1.8rem 4.8rem;
+        border: .1rem solid #000;
+        border-radius: 1.2rem;
+        background-color: transparent;
+        cursor: pointer;
+      }
+    }
+  }
+}
+
+
+.related {
+  border-bottom: .1rem solid $gray-9F9;
+  padding: 5rem 0 8rem 0;
+  & > h3 {
+    font-size: 3.6rem;
+    font-weight: 500;
+    text-align: center;
+    margin-bottom: 2.6rem;
+  }
+}
