--- a/assets/sass/utilities/_variables.scss
+++ b/assets/sass/utilities/_variables.scss
@@ -7,5 +7,6 @@ $gray-B0B: #B0B0B0;
 $yellow-B88: #B88E2F;
 $yellow-FAF: #FAF3EA;
 $yellow-F9F: #F9F1E7;
+$yellow-D9D: #D9D9D9;
 $black-242: #242424;
 $gray-9F9: #9F9F9F;
